--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,8 @@ dependencies {
     // Other Libraries
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
+    implementation 'net.objecthunter:exp4j:0.4.4'
+
 
 
     implementation 'com.android.support:multidex:1.0.3'
