--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,7 +82,7 @@ dependencies {
     implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
     implementation 'net.objecthunter:exp4j:0.4.4'
 
-
+    implementation 'com.scireum:parsii:1.5'
 
     implementation 'com.android.support:multidex:1.0.3'
 
