--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,11 +23,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
@@ -76,14 +80,16 @@ dependencies {
     //Firebase
     implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation 'com.google.firebase:firebase-crash:16.2.1'
+    implementation 'com.google.firebase:firebase-firestore:19.0.2'
+
 
     // Other Libraries
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
     implementation 'net.objecthunter:exp4j:0.4.4'
-
-    implementation 'com.scireum:parsii:1.5'
-
+    implementation 'com.scottyab:aescrypt:0.0.1'
     implementation 'com.android.support:multidex:1.0.3'
 
 }
+
+apply plugin: 'com.google.gms.google-services'
