--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.abecerra.calculator.presentation.ui.calculator.CalculatorActivity"></activity>
+
         <activity
-            android:name="com.abecerra.calculator.presentation.ui.main.MainActivity"
-            android:screenOrientation="portrait">
+            android:name=".presentation.ui.main.MainActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,6 +22,11 @@
                 <category android:name="android.intent.category.APP_CALCULATOR" />
             </intent-filter>
         </activity>
+        <activity android:name=".presentation.ui.calculator.CalculatorActivity" />
+        <activity
+            android:name=".presentation.ui.about.AboutActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AboutTheme" />
     </application>
 
 </manifest>
