--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,10 @@ dependencies {
     implementation 'com.squareup.moshi:moshi:1.7.0'
     implementation 'com.squareup.moshi:moshi-kotlin:1.7.0'
 
+    // Room
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
+
     // Koin
     implementation "org.koin:koin-android:2.0.0-rc-2"
     implementation "org.koin:koin-android-scope:2.0.0-rc-2"
@@ -77,11 +81,10 @@ dependencies {
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     kapt "android.arch.lifecycle:compiler:1.1.1"
 
-    //Firebase
+    // Firebase
     implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation 'com.google.firebase:firebase-crash:16.2.1'
     implementation 'com.google.firebase:firebase-firestore:19.0.2'
-
 
     // Other Libraries
     implementation 'com.jakewharton.timber:timber:4.7.1'
@@ -89,6 +92,8 @@ dependencies {
     implementation 'net.objecthunter:exp4j:0.4.4'
     implementation 'com.scottyab:aescrypt:0.0.1'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
+
 
 }
 
