--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,12 +87,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:19.0.2'
 
     // Other Libraries
-    implementation 'com.jakewharton.timber:timber:4.7.1'
-    implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
-    implementation 'net.objecthunter:exp4j:0.4.4'
-    implementation 'com.scottyab:aescrypt:0.0.1'
-    implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.sothree.slidinguppanel:library:3.4.0'
+    implementation 'com.jakewharton.timber:timber:4.7.1' // Logging
+    implementation 'com.aurelhubert:ahbottomnavigation:2.1.0' // BottomNavigation
+    implementation 'net.objecthunter:exp4j:0.4.4' // Math
+    implementation 'com.scottyab:aescrypt:0.0.1' // Encryption
+    implementation 'com.android.support:multidex:1.0.3' // Multidex
+    implementation 'com.sothree.slidinguppanel:library:3.4.0' // Sliding panel
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0' // Charts
 
 
 }
